--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "build": "next build"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.1.1",
+    "dotenv": "^8.2.0",
+    "isomorphic-unfetch": "^3.1.0",
     "next": "^10.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
