--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.1.1",
-    "dotenv": "^8.2.0",
     "firebase": "^8.2.9",
+    "firebase-admin": "^9.5.0",
     "isomorphic-unfetch": "^3.1.0",
     "next": "^10.0.7",
     "react": "^17.0.1",
