--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "NODE_OPTIONS='--inspect' next dev",
     "start": "next start",
     "build": "next build",
-    "export": "next export"
+    "export": "next export",
+    "lint": "eslint . --fix"
   },
   "dependencies": {
     "@react-google-maps/api": "^2.1.1",
@@ -18,5 +19,13 @@
     "next": "^10.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.20.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
