--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "dev": "NODE_OPTIONS='--inspect' next dev",
     "start": "next start",
     "build": "next build",
-    "export": "next export",
-    "lint": "eslint . --fix"
+    "export": "next export"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    },
+    "lint-staged": {
+      "*.js": " eslint --cache --fix",
+      "*.(js,css,md)": "prettier  --write"
+    }
   },
   "dependencies": {
     "@react-google-maps/api": "^2.1.1",
@@ -23,9 +31,13 @@
   "devDependencies": {
     "eslint": "^7.20.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^5.1.1",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1"
   }
 }
