--- a/.gitignore
+++ b/.gitignore
@@ -201,3 +201,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/node,react,macos,dotenv,linux,windows
+
+.vscode
