--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-google-maps/api": "^2.1.1",
     "firebase": "^8.2.9",
     "firebase-admin": "^9.5.0",
+    "global": "^4.4.0",
     "isomorphic-unfetch": "^3.1.0",
     "next": "^10.0.7",
     "react": "^17.0.1",
