--- a/.gitignore
+++ b/.gitignore
@@ -125,6 +125,9 @@ typings/
 # dotenv environment variables file
 .env.test
 .env*.local
+.env
+.env.development
+.env.production
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
