--- a/package.json
+++ b/package.json
@@ -21,21 +21,22 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.1.1",
-    "firebase": "^8.2.9",
+    "firebase": "^8.3.1",
+    "firebase-admin": "^9.5.0",
     "isomorphic-unfetch": "^3.1.0",
-    "next": "^10.0.7",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "next": "^10.0.9",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "eslint": "^7.20.0",
+    "eslint": "^7.22.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react": "^7.23.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^5.1.1",
+    "husky": "^5.2.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1"
   }
