--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "NODE_OPTIONS='--inspect' next dev",
     "start": "next start",
     "build": "next build",
-    "export": "next export"
+    "export": "next export",
+    "lint": "eslint . --fix"
   },
   "husky": {
     "hooks": {
