--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "firebase": "^8.3.1",
     "firebase-admin": "^9.5.0",
     "isomorphic-unfetch": "^3.1.0",
+    "js-cookie": "^2.2.1",
     "next": "^10.0.9",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-firebaseui": "^4.1.0"
   },
   "devDependencies": {
     "eslint": "^7.22.0",
