--- a/package.json
+++ b/package.json
@@ -7,38 +7,26 @@
   "scripts": {
     "dev": "NODE_OPTIONS='--inspect' next dev",
     "start": "next start",
-    "build": "next build",
+    "build": "next build && next export",
     "lint": "eslint . --fix"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    },
-    "lint-staged": {
-      "*.js": " eslint --cache --fix",
-      "*.(js,css,md)": "prettier  --write"
-    }
   },
   "dependencies": {
     "@react-google-maps/api": "^2.1.1",
-    "firebase": "^8.4.1",
+    "firebase": "^8.4.3",
     "isomorphic-unfetch": "^3.1.0",
     "js-cookie": "^2.2.1",
-    "next": "^10.1.3",
+    "next": "^10.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-firebaseui": "^4.1.0"
+    "react-firebaseui": "^5.0.2"
   },
   "devDependencies": {
-    "eslint": "^7.24.0",
+    "eslint": "^7.25.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^8.2.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^6.0.0",
-    "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1"
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
