--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "NODE_OPTIONS='--inspect' next dev",
     "start": "next start",
-    "build": "next build && next export",
+    "build": "next build",
     "lint": "eslint . --fix"
   },
   "dependencies": {
