--- a/package.json
+++ b/package.json
@@ -5,28 +5,28 @@
   "author": "Jean Pierre <stick-master666@hotmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_OPTIONS='--inspect' next dev",
+    "dev": "next dev",
     "start": "next start",
     "build": "next build",
     "lint": "eslint . --fix"
   },
   "dependencies": {
-    "@react-google-maps/api": "^2.1.1",
-    "firebase": "^8.4.3",
+    "@react-google-maps/api": "^2.2.0",
+    "firebase": "^8.7.0",
     "isomorphic-unfetch": "^3.1.0",
     "js-cookie": "^2.2.1",
-    "next": "^10.2.0",
+    "next": "^11.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebaseui": "^5.0.2"
   },
   "devDependencies": {
-    "eslint": "^7.25.0",
+    "eslint": "^7.30.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
